<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".bai2.Bai2Fragment">

    <!-- TODO: Update blank fragment layout -->
   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="vertical">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:layout_marginTop="50dp"
               android:background="@drawable/imggg"
               android:textSize="20dp"
               android:textStyle="bold"
               android:gravity="center"
               android:text="@string/con1" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="left"
               android:layout_marginTop="50dp"
               android:textSize="20dp"
               android:padding="8dp"
               android:background="@drawable/imggg"
               android:textStyle="bold"
               android:gravity="center"
               android:text="@string/bo1" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:textSize="20dp"
               android:padding="8dp"
               android:layout_marginTop="50dp"
               android:background="@drawable/imggg"

               android:textStyle="bold"
               android:gravity="center"
               android:text="@string/con2" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="left"
               android:layout_marginTop="50dp"
               android:textSize="20dp"
               android:background="@drawable/imggg"
               android:textStyle="bold"
               android:gravity="center"
               android:text="@string/bo2" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:layout_marginTop="50dp"
               android:textSize="20dp"
               android:background="@drawable/imggg"
               android:padding="10dp"
               android:textStyle="bold"
               android:gravity="center"
               android:text="@string/conba" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="left"
               android:layout_marginTop="50dp"
               android:background="@drawable/imggg"

               android:textStyle="bold"
               android:gravity="center"
               android:textSize="20dp"
               android:text="@string/bo3" />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="right"
               android:textSize="20dp"
               android:layout_marginTop="50dp"
               android:layout_marginBottom="20dp"

               android:background="@drawable/imggg"
               android:textStyle="bold"
               android:gravity="center"
               android:text="@string/con4" />
       </LinearLayout>
   </ScrollView>

</FrameLayout>